--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,5 +3,36 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 set escape-time 0
-set -g status off
-bind - split-window -v
+
+### TMUX Status Bar Styles
+# Message
+set -g message-style fg=colour51,bg=colour240
+
+# Left
+set -g status-left '#[bg=colour51]#[fg=black] Session: #S #[bg=default]#[fg=colour51] '
+set -g status-left-length 60
+
+# Window Status
+set -g status-justify centre
+
+# Right
+set -g status-right '#[fg=colour202][ μ #(cd #{pane_current_path}; hg branch) ]-#[fg=colour51]-[ %b %d ⊗ %H:%M ]'
+set -g status-right-length 60
+
+### Pane Status
+set -g pane-border-format '⟨ #{pane_index}:#{pane_current_command} ⟩'
+set -g pane-border-status top
+set -g pane-border-bg default
+set -g pane-border-fg colour240
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour51
+
+### Window Styles
+bind-key v split-window -h
+bind-key h split-window -v
+
+### Movement
+bind-key J resize-pane -D 15
+bind-key K resize-pane -U 15
+bind-key H resize-pane -L 15
+bind-key L resize-pane -R 15
