Updating repo with whats on work machine

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g status-left '#[bg=colour51]#[fg=black] Session: #S #[bg=default]#[fg=colo
 set -g status-left-length 60
 
 # Window Status
-set -g status-justify centre
+set -g status off
 
 # Right
 set -g status-right '#[fg=colour202][ μ #(cd #{pane_current_path}; hg branch) ]-#[fg=colour51]-[ %b %d ⊗ %H:%M ]'
