--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "termide",
+  "version": "1.0.0",
+  "description": "Personal terminal setup script",
+  "main": "index.js",
+  "repository": "git@github.com:joshua-owens/termide.git",
+  "author": "Josh Owens <me@jowens.dev>",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
+  },
+  "scripts": {
+    "lint": "npx eslint **/*.js"
   }
 }
