--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "termide",
   "version": "1.0.0",
   "description": "Personal terminal setup script",
-  "main": "index.js",
+  "bin": "index.js",
   "repository": "git@github.com:joshua-owens/termide.git",
   "author": "Josh Owens <me@jowens.dev>",
   "license": "MIT",
@@ -14,5 +14,10 @@
   },
   "scripts": {
     "lint": "npx eslint **/*.js"
+  },
+  "pkg": {
+    "targets": [
+      "node10-linux-x64"
+    ]
   }
 }
