--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Josh Owens <me@jowens.dev>",
   "license": "MIT",
   "dependencies": {
-    "ora": "^4.0.3"
+    "listr": "^0.14.3"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
